--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "author": "David Llumitaxi",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "pug": "^3.0.3"
+    "mysql2": "^3.10.1",
+    "pug": "^3.0.3",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
