--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "author": "David Llumitaxi",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "mysql2": "^3.10.1",
+    "nodemailer": "^6.9.14",
     "pug": "^3.0.3",
     "sequelize": "^6.37.3"
   },
